--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <h3>Nosso projeto:</h3>
             <p>Olá! Somos do Colégio Estadual Jorge Zarur, da turma 3002. Estamos realizando um projeto de Empreendedorismo, e nesse projeto iremos vender Empada. O Grupo de marketing ficou encarregado de criar uma logotipo e uma forma de divulgação, então um dos nossos colegas criou esse site, cujo nome escolhemos para o projeto é "Empada Delicious".</p>
         <h3>Colaboradores:</h3>
-            <p>Alunos do marketing que contribuiram para esse projeto: Rafaela, Giulia, Vinícius, Igor, João e Letícia.</p>
-	    <p>Responsável por todo o projeto: Professora Jaqueline.</p>
+            <p>Alunos do marketing que contribuiram para esse projeto: Rafaela, Giulia, Vinícius, Igor, João e Letícia. <br> <br>
+		    Responsável por todo o projeto: Professora Jaqueline.</p>
 	<h3>Formas de Contato:</h3>
 	    <p>Telefone para contato com nossa escola: (21) 3467-1085 <br> Endereço: R. e Estrada do Quafa - Bangu, Rio de Janeiro - RJ, 21862-390</p>
     </div>
