--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Empada Delicious</title>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/html.ico" type="image/x-icon">
 </head>
 <body>
 <header class="menu">
