--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
 </section>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/sobre.js"></script>
 </body>
 </html>
